# qt-solutions

qtwinmigrate/: CMakeLists.txt
qtwinmigrate/src/: qwinwidget.cpp
